After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782206 - tool: Fix typos in error messages
tool: Fix typos in error messages
Status: RESOLVED FIXED
Product: libsecret
Classification: Other
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: libsecret maintainer(s)
libsecret maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-05-05 08:49 UTC by Bastien Nocera
Modified: 2017-09-15 09:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tool: Fix typos in error messages (1.09 KB, patch)
2017-05-05 08:49 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-05-05 08:49:27 UTC
.
Comment 1 Bastien Nocera 2017-05-05 08:49:31 UTC
Created attachment 351168 [details] [review]
tool: Fix typos in error messages

s/specfy/specify/
Comment 2 Philip Withnall 2017-09-15 09:33:50 UTC
Comment on attachment 351168 [details] [review]
tool: Fix typos in error messages

This got pushed by Stef in May as commit 99a2e6ad3e5e1fa5ffaff9967cc9dd4177199cd5.