tool: Fix typos in error messages

s/specfy/specify/

https://bugzilla.gnome.org/show_bug.cgi?id=782206